design navbar&footer dari figma

--- a/agency/about.html
+++ b/agency/about.html
@@ -34,6 +34,7 @@
     <!-- Style Sheet -->
     <link href="../agency/css/style.css" rel="stylesheet" />
     <link href="../agency/css/about-contact.css" rel="stylesheet" />
+    <link href="../agency/css/style-footer.css" rel="stylesheet" />
   </head>
 
   <body data-offset="90" data-spy="scroll" data-target=".navbar">
@@ -69,7 +70,7 @@
                   <a href="./stem-junior.html">Programmes</a>
                 </li>
                 <li><a href="blog-list.html">Blog Entries</a></li>
-                <li><a href="#" class="active">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
               </ul>
               <a class="menu-trigger">
                 <span>Menu</span>
@@ -400,37 +401,42 @@
         </div>
       </div>
     </section>
-
     <!--Our Services End-->
 
     <!--Our Sponsor-->
-    <section class="gradient-bg1" id="client">
-      <div class="container partner">
+    <section class="" id="client">
+      <div class="container">
         <div
           class="sectionOne__content--label label-title donker text-center label-partner"
         >
           Our partner
         </div>
+
         <div class="row">
           <div class="col-md-12">
             <!--Client Slider-->
-            <!-- <div class="owl-carousel partners-slider"> -->
-            <div class="d-flex logo-group">
+            <div class="owl-carousel partners-slider">
               <!--Item-->
               <div class="logo-item">
-                <img alt="client-logo" src="./img/icons/microbit.png" />
+                <img
+                  alt="client-logo"
+                  src="../agency/img/icons/makeblock.png"
+                />
               </div>
               <!--Item-->
               <div class="logo-item">
-                <img alt="client-logo" src="./img/icons/hiwonder.png" />
+                <img alt="client-logo" src="../agency/img/icons/hiwonder.png" />
               </div>
               <!--Item-->
               <div class="logo-item">
-                <img alt="client-logo" src="./img/icons/makeblock.png" />
+                <img alt="client-logo" src="../agency/img/icons/microbit.png" />
               </div>
               <!--Item-->
               <div class="logo-item">
-                <img alt="client-logo" src="./img/icons/matatalab.png" />
+                <img
+                  alt="client-logo"
+                  src="../agency/img/icons/matatalab.png"
+                />
               </div>
             </div>
           </div>
@@ -439,13 +445,29 @@
     </section>
     <!--Our Sponsor End-->
 
+    <!-- Join Sponsor -->
+    <section class="gradient-bg1" id="client">
+      <div class="container partner">
+        <div
+          class="sectionOne__content--label donker text-center label-partner"
+        >
+          <h2 class="label-title2">Join Our Parner</h2>
+
+          <p class="para text-dark pb-2">
+            There are many variations of passages of Lorem Ipsum available, but
+          </p>
+          <a class="btn-default donker bg-blue" href="">SHOW MORE</a>
+        </div>
+      </div>
+    </section>
+    <!-- Join Sponsor End -->
+
     <!--Footer Start-->
-    <footer class="footer-style-1 bg-light" style="">
+    <footer class="gradient-bg1">
       <div class="">
-        <div class="row align-items-center">
-          <!--Social-->
+        <div class="row align-items-center footer-stem">
           <div class="col-md-4">
-            <div class="footer-social">
+            <div class="footer-left">
               <img
                 alt="vektor"
                 src="../agency/img/elemen program kanan atas.png"
@@ -453,14 +475,14 @@
             </div>
           </div>
           <!--Text-->
-          <div class="col-md-4 text-center">
-            <p class="company-about fadeIn">
+          <div class="col-md-4 text-center company-about">
+            <p class="">
               © 2023 matatalab
               <a href="../index-agency.html">stem education</a>
             </p>
           </div>
           <div class="col-md-4 pl-5">
-            <div class="footer-social">
+            <div class="footer-right">
               <img
                 alt="vektor"
                 src="../agency/img/element program kiri atas.png"
@@ -487,7 +509,15 @@
     <!-- JavaScript -->
     <script src="../vendor/js/bundle.min.js"></script>
     <!-- Plugin Js -->
+    <!-- Plugin Js -->
+    <!-- <script src="../vendor/js/jquery.appear.js"></script> -->
+    <!-- <script src="../vendor/js/jquery.fancybox.min.js"></script> -->
     <script src="../vendor/js/owl.carousel.min.js"></script>
+    <script src="../vendor/js/swiper.min.js"></script>
+    <!-- <script src="../vendor/js/morphext.min.js"></script> -->
+    <!-- <script src="../vendor/js/TweenMax.min.js"></script> -->
+    <script src="../vendor/js/wow.min.js"></script>
+    <!-- <script src="../vendor/js/jquery.cubeportfolio.min.js"></script> -->
 
     <!-- custom script -->
     <script src="./js/script.js"></script>
