--- a/agency/blog-list.html
+++ b/agency/blog-list.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Page Title -->
-    <title>MegaOne - Agency</title>
+    <title>STEM INSTITUTION</title>
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.ico" />
     <!-- Bundle -->
@@ -20,7 +20,9 @@
     <link rel="stylesheet" href="../vendor/css/swiper.min.css" />
     <link rel="stylesheet" href="../vendor/css/cubeportfolio.min.css" />
     <!-- Style Sheet -->
-    <link rel="stylesheet" href="../agency/css/style.css" />
+    <link rel="stylesheet" href="../agency/css/style-blog.css" />
+    <link href="../agency/css/about-contact.css" rel="stylesheet" />
+    <link href="../agency/css/style-footer.css" rel="stylesheet" />
   </head>
 
   <body data-spy="scroll" data-target=".navbar" data-offset="90">
@@ -43,20 +45,22 @@
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
               <a href="#" class="logo">
-                <img src="../agency/img/logo.png" alt="STEM INSTITUTION" />
+                <img src="./img/icons/stem.svg" alt="STEM INSTITUTION" />
               </a>
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
                 <li>
-                  <a href="..//index.html" class="active">Home</a>
+                  <a href="../index.html">Home</a>
                 </li>
-                <li><a href="#about">About</a></li>
+                <li><a href="./about.html">About</a></li>
                 <li>
-                  <a href="#">Programmes</a>
+                  <a href="./stem junior.html">Programmes</a>
                 </li>
-                <li><a href="#blog">Blog Entries</a></li>
-                <li><a href="#contact-us">Contact Us</a></li>
+                <li>
+                  <a class="active" href="blog-list.html">Blog Entries</a>
+                </li>
+                <li><a href="contact.html">Contact Us</a></li>
               </ul>
               <a class="menu-trigger">
                 <span>Menu</span>
@@ -97,17 +101,11 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="center-heading">
-              <h2 class="section-title">Blog</h2>
+              <h2 class="section-title">Our Blog</h2>
             </div>
           </div>
           <div class="offset-lg-3 col-lg-6">
-            <div class="center-text mb-5">
-              <p>
-                Integer molestie aliquam gravida. Nullam nec arcu finibus,
-                imperdiet nulla vitae, placerat nibh. Cras maximus venenatis
-                molestie.
-              </p>
-            </div>
+            <div class="center-text mb-5"></div>
           </div>
         </div>
         <!-- ***** Section Title End ***** -->
@@ -120,14 +118,17 @@
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="#">Vivamus ac vehicula dui</a>
+                  <a href="#"
+                    >Bahasa Pemrograman Untuk Mengawali Anak Masuk
+                    DuniaPemrograman</a
+                  >
                 </h3>
                 <div class="text">
                   Cras aliquet ligula dui, vitae fermentum velit tincidunt id.
                   Praesent eu finibus nunc. Nulla in sagittis eros. Aliquam
                   egestas augue.
                 </div>
-                <a href="blog-details.html" class="main-button">Read More</a>
+                <a href="blog-details-1.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -138,14 +139,17 @@
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="#">Phasellus convallis augue</a>
+                  <a href="#"
+                    >Bahasa Pemrograman Untuk Mengawali Anak Masuk
+                    DuniaPemrograman</a
+                  >
                 </h3>
                 <div class="text">
                   Aliquam commodo ornare nisl, et scelerisque nisl dignissim ac.
                   Vestibulum finibus urna ut velit venenatis, vel ultrices
                   sapien mattis.
                 </div>
-                <a href="blog-details.html" class="main-button">Read More</a>
+                <a href="blog-details-1.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -156,14 +160,16 @@
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="#">Nam gravida purus non</a>
+                  <a href="#"
+                    >Masa Depan Kecerdasan Buatan (AI) dan Pendidikan STEAM</a
+                  >
                 </h3>
                 <div class="text">
                   Maecenas eu erat vitae dui convallis consequat vel gravida
                   nulla. Vestibulum finibus euismod odio, ut tempus enim varius
                   eu.
                 </div>
-                <a href="blog-details.html" class="main-button">Read More</a>
+                <a href="blog-details-2.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -174,14 +180,16 @@
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="#">Nam gravida purus non</a>
+                  <a href="#"
+                    >Masa Depan Kecerdasan Buatan (AI) dan Pendidikan STEAM</a
+                  >
                 </h3>
                 <div class="text">
                   Maecenas eu erat vitae dui convallis consequat vel gravida
                   nulla. Vestibulum finibus euismod odio, ut tempus enim varius
                   eu.
                 </div>
-                <a href="blog-details.html" class="main-button">Read More</a>
+                <a href="blog-details-2.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -192,14 +200,17 @@
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="#">Nam gravida purus non</a>
+                  <a href="#"
+                    >Transformasi Pendidikan STEM melalui Teknologi: Membuka
+                    Pintu Ke Masa Depan yang Cerah</a
+                  >
                 </h3>
                 <div class="text">
                   Maecenas eu erat vitae dui convallis consequat vel gravida
                   nulla. Vestibulum finibus euismod odio, ut tempus enim varius
                   eu.
                 </div>
-                <a href="blog-details.html" class="main-button">Read More</a>
+                <a href="blog-details-3.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -210,14 +221,17 @@
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="#">Nam gravida purus non</a>
+                  <a href="#"
+                    >Transformasi Pendidikan STEM melalui Teknologi: Membuka
+                    Pintu Ke Masa Depan yang Cerah</a
+                  >
                 </h3>
                 <div class="text">
                   Maecenas eu erat vitae dui convallis consequat vel gravida
                   nulla. Vestibulum finibus euismod odio, ut tempus enim varius
                   eu.
                 </div>
-                <a href="blog-details.html" class="main-button">Read More</a>
+                <a href="blog-details-3.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -227,52 +241,31 @@
     <!-- ***** Blog End ***** -->
 
     <!--Footer Start-->
-    <footer class="footer-style-1 bg-light">
-      <div class="container">
-        <div class="row align-items-center">
-          <!--Social-->
-          <div class="col-md-6">
-            <div class="footer-social">
-              <ul class="list-unstyled">
-                <li>
-                  <a class="wow fadeInUp" href="javascript:void(0);"
-                    ><i class="fab fa-facebook-f" aria-hidden="true"></i
-                  ></a>
-                </li>
-                <li>
-                  <a class="wow fadeInDown" href="javascript:void(0);"
-                    ><i class="fab fa-twitter" aria-hidden="true"></i
-                  ></a>
-                </li>
-                <li>
-                  <a class="wow fadeInUp" href="javascript:void(0);"
-                    ><i class="fab fa-google-plus-g" aria-hidden="true"></i
-                  ></a>
-                </li>
-                <li>
-                  <a class="wow fadeInDown" href="javascript:void(0);"
-                    ><i class="fab fa-linkedin-in" aria-hidden="true"></i
-                  ></a>
-                </li>
-                <li>
-                  <a class="wow fadeInUp" href="javascript:void(0);"
-                    ><i class="fab fa-instagram" aria-hidden="true"></i
-                  ></a>
-                </li>
-                <li>
-                  <a class="wow fadeInDown" href="javascript:void(0);"
-                    ><i class="fab fa-pinterest-p" aria-hidden="true"></i
-                  ></a>
-                </li>
-              </ul>
+    <footer class="bg-white">
+      <div class="">
+        <div class="row align-items-center footer-stem">
+          <div class="col-md-4">
+            <div class="footer-left">
+              <img
+                alt="vektor"
+                src="../agency/img/elemen program kanan atas.png"
+              />
             </div>
           </div>
           <!--Text-->
-          <div class="col-md-6 text-md-right">
-            <p class="company-about fadeIn">
-              © 2023
-              <a href="javascript:void(0);">STEM INSTITUTION</a>
+          <div class="col-md-4 text-center company-about">
+            <p class="">
+              © 2023 matatalab
+              <a href="../index-agency.html">stem education</a>
             </p>
+          </div>
+          <div class="col-md-4 pl-5">
+            <div class="footer-right">
+              <img
+                alt="vektor"
+                src="../agency/img/element program kiri atas.png"
+              />
+            </div>
           </div>
         </div>
       </div>
@@ -317,5 +310,20 @@
     <script src="../vendor/js/extensions/revolution.extension.video.min.js"></script>
     <!-- custom script -->
     <script src="js/script.js"></script>
+    <!-- jQuery -->
+    <script src="../agency/js/about-contact/jquery-2.1.0.min.js"></script>
+
+    <!-- Bootstrap -->
+    <script src="../agency/js/about-contact/popper.js"></script>
+    <script src="../agency/js/about-contact/bootstrap.min.js"></script>
+
+    <!-- Plugins -->
+    <script src="../agency/js/about-contact/scrollreveal.min.js"></script>
+    <script src="../agency/js/about-contact/waypoints.min.js"></script>
+    <script src="../agency/js/about-contact/jquery.counterup.min.js"></script>
+    <script src="../agency/js/about-contact/imgfix.min.js"></script>
+
+    <!-- Global Init -->
+    <script src="../agency/js/about-contact/custom.js"></script>
   </body>
 </html>
