--- a/agency/contact.html
+++ b/agency/contact.html
@@ -33,9 +33,8 @@
     <link href="../vendor/css/cubeportfolio.min.css" rel="stylesheet" />
     <!-- Style Sheet -->
     <link href="../agency/css/style.css" rel="stylesheet" />
-
-    <!-- <link href="../designPage/css/navbar.css" rel="stylesheet" /> -->
     <link href="../agency/css/about-contact.css" rel="stylesheet" />
+    <link href="../agency/css/style-footer.css" rel="stylesheet" />
   </head>
 
   <body data-offset="90" data-spy="scroll" data-target=".navbar">
@@ -71,7 +70,7 @@
                   <a href="./stem-junior.html">Programmes</a>
                 </li>
                 <li><a href="blog-list.html">Blog Entries</a></li>
-                <li><a href="#" class="active">Contact Us</a></li>
+                <li><a href="#contact-us" class="active">Contact Us</a></li>
               </ul>
               <a class="menu-trigger">
                 <span>Menu</span>
@@ -212,12 +211,11 @@
     <!--Map End-->
 
     <!--Footer Start-->
-    <footer class="footer-style-1 bg-light" style="">
+    <footer class="bg-white">
       <div class="">
-        <div class="row align-items-center">
-          <!--Social-->
+        <div class="row align-items-center footer-stem">
           <div class="col-md-4">
-            <div class="footer-social">
+            <div class="footer-left">
               <img
                 alt="vektor"
                 src="../agency/img/elemen program kanan atas.png"
@@ -225,14 +223,14 @@
             </div>
           </div>
           <!--Text-->
-          <div class="col-md-4 text-center">
-            <p class="company-about fadeIn">
+          <div class="col-md-4 text-center company-about">
+            <p class="">
               © 2023 matatalab
               <a href="../index-agency.html">stem education</a>
             </p>
           </div>
           <div class="col-md-4 pl-5">
-            <div class="footer-social">
+            <div class="footer-right">
               <img
                 alt="vektor"
                 src="../agency/img/element program kiri atas.png"
@@ -263,26 +261,20 @@
 
     <!-- custom script -->
     <script src="./js/script.js"></script>
-
     <!-- jQuery -->
-    <script src="../agency/js/jquery-2.1.0.min.js"></script>
+    <script src="../agency/js/about-contact/jquery-2.1.0.min.js"></script>
 
     <!-- Bootstrap -->
-    <script src="../agency/js/popper.js"></script>
-    <script src="../agency/js/bootstrap.min.js"></script>
+    <script src="../agency/js/about-contact/popper.js"></script>
+    <script src="../agency/js/about-contact/bootstrap.min.js"></script>
 
     <!-- Plugins -->
-    <script src="../agency/js/scrollreveal.min.js"></script>
-    <script src="../agency/js/waypoints.min.js"></script>
-    <script src="../agency/js/jquery.counterup.min.js"></script>
-    <script src="../agency/js/imgfix.min.js"></script>
-
-    <!-- google map -->
-
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJRG4KqGVNvAPY4UcVDLcLNXMXk2ktNfY"></script> -->
-    <script src="../agency/js/map.js"></script>
+    <script src="../agency/js/about-contact/scrollreveal.min.js"></script>
+    <script src="../agency/js/about-contact/waypoints.min.js"></script>
+    <script src="../agency/js/about-contact/jquery.counterup.min.js"></script>
+    <script src="../agency/js/about-contact/imgfix.min.js"></script>
 
     <!-- Global Init -->
-    <script src="../agency/js/custom.js"></script>
+    <script src="../agency/js/about-contact/custom.js"></script>
   </body>
 </html>
