--- a/agency/stem adventures.html
+++ b/agency/stem adventures.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Page Title -->
-    <title>STEM Junior</title>
+    <title>STEM Adventures</title>
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.ico" />
     <!-- Bundle -->
@@ -37,7 +37,6 @@
       <div class="bg-layer"></div>
     </div>
     <!--/Preloader -->
-
     <!-- ***** Header Area Start ***** -->
     <header class="header-area header-sticky">
       <div class="container">
@@ -75,21 +74,21 @@
     <!-- ***** Header Area End ***** -->
 
     <!--Banner Start-->
-    <section class="page-title cursor-light">
+    <section class="page-tittlea cursor-light">
       <!-- Pattern Layers -->
       <div class="pattern-layers">
         <div class="layer-one"></div>
         <div class="layer-two"></div>
       </div>
       <div class="auto-container">
-        <h2 class="hide-cursor">Latest News</h2>
+        <h2 class="hide-cursor">STEM Adventures</h2>
         <ul class="page-breadcrumb link">
           <li>
-            <a href="javascript:void(0);"
+            <a href="../index-agency.html"
               ><span class="icon fas fa-home"></span> home</a
             >
           </li>
-          <li>STEM Junior</li>
+          <li>adventures program</li>
         </ul>
       </div>
     </section>
@@ -111,26 +110,25 @@
             <div class="half-img mt-5 pt-4 mt-lg-0 pt-lg-0">
               <img
                 alt="vector"
-                src="img/stem junior 1.png"
-                style="border-radius: 20px; border: 3px solid #eb5763"
+                src="img/stem_adventures_1_1.png"
+                style="border-radius: 20px; border: 3px solid #f1a325"
               />
             </div>
           </div>
           <div class="col-lg-6 wow fadeInRight">
             <div class="heading-area" style="margin-left: 50px">
               <h2 class="title">
-                Junior STEMers
+                STEM Adventures
                 <span class="alt-color js-rotating">About, Benefit</span>
                 program
               </h2>
               <p class="para">
-                The junior stemers curriculum is designed to introduce children
-                to the world of science, technology, math, art, research, social
-                and socio-emotional learning through the use of Tale-bot.
-                Children will learn to understand basic programming concepts and
-                explore the functionality of the Tale-bot. The curriculum aims
-                to enhance students' understanding of science technology,
-                creativity, and problem-solving skills
+                The curriculum is designed to introduce children to science,
+                engineering and math through Vincibot. They will understand
+                basic programming concepts, explore Vincibot's capabilities. The
+                curriculum aims to enhance understanding of science as well as
+                skills and creativity and problem solving in an interactive and
+                fun way.
               </p>
             </div>
           </div>
@@ -140,6 +138,9 @@
 
     <!--desc of program End-->
     <!--Blog End-->
+
+    <!-- manfaat program -->
+    <!--manfaat program end-->
 
     <!-- FROM PENDAFTARAN-->
 
@@ -166,7 +167,7 @@
               "
             >
               <a
-                class="btn btn-large btn-rounded btn-red btn-hvr-blue mt-3"
+                class="btn btn-large btn-rounded btn-yellow btn-hvr-pink mt-3"
                 href="javascript:void(0);"
                 >Learn More
                 <div class="btn-hvr-setting">
@@ -254,6 +255,7 @@
     <script src="../vendor/js/extensions/revolution.extension.video.min.js"></script>
     <!-- custom script -->
     <script src="js/script.js"></script>
+
     <!-- jQuery -->
     <script src="../agency/js/about-contact/jquery-2.1.0.min.js"></script>
 
