--- a/agency/stem innovators.html
+++ b/agency/stem innovators.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Page Title -->
-    <title>STEM Junior</title>
+    <title>STEM Innovators</title>
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.ico" />
     <!-- Bundle -->
@@ -75,21 +75,21 @@
     <!-- ***** Header Area End ***** -->
 
     <!--Banner Start-->
-    <section class="page-title cursor-light">
+    <section class="page-tittlei cursor-light">
       <!-- Pattern Layers -->
       <div class="pattern-layers">
         <div class="layer-one"></div>
         <div class="layer-two"></div>
       </div>
       <div class="auto-container">
-        <h2 class="hide-cursor">Latest News</h2>
+        <h2 class="hide-cursor">STEM Innovators</h2>
         <ul class="page-breadcrumb link">
           <li>
-            <a href="javascript:void(0);"
+            <a href="../index-agency.html"
               ><span class="icon fas fa-home"></span> home</a
             >
           </li>
-          <li>STEM Junior</li>
+          <li>Stem Innovators</li>
         </ul>
       </div>
     </section>
@@ -111,26 +111,26 @@
             <div class="half-img mt-5 pt-4 mt-lg-0 pt-lg-0">
               <img
                 alt="vector"
-                src="img/stem junior 1.png"
-                style="border-radius: 20px; border: 3px solid #eb5763"
+                src="img/stem innovators vektor.png"
+                style="border-radius: 20px; border: 3px solid #63c7b2"
               />
             </div>
           </div>
           <div class="col-lg-6 wow fadeInRight">
             <div class="heading-area" style="margin-left: 50px">
               <h2 class="title">
-                Junior STEMers
-                <span class="alt-color js-rotating">About, Benefit</span>
+                Stem Innovators
+                <span class="alt-color js-rotating">Benefit, About</span>
                 program
               </h2>
               <p class="para">
-                The junior stemers curriculum is designed to introduce children
-                to the world of science, technology, math, art, research, social
-                and socio-emotional learning through the use of Tale-bot.
-                Children will learn to understand basic programming concepts and
-                explore the functionality of the Tale-bot. The curriculum aims
-                to enhance students' understanding of science technology,
-                creativity, and problem-solving skills
+                The STEM Innovators curriculum is designed to introduce children
+                to the world of programming and technology through the use of
+                Micro:bit. Kids will learn basic programming concepts, explore
+                Micro:bit hardware, and develop creative projects using this
+                platform. This curriculum aims to increase students'
+                understanding of computing, creativity, and problem-solving
+                skills.
               </p>
             </div>
           </div>
@@ -141,21 +141,22 @@
     <!--desc of program End-->
     <!--Blog End-->
 
+    <!-- manfaat program -->
+
+    <!--manfaat program end-->
+
     <!-- FROM PENDAFTARAN-->
 
     <section class="bg-light">
       <div class="container">
         <div class="col-lg-12">
           <div class="heading-area">
-            <h2 class="tittle">
+            <h2 class="title" style="text-align: center">
               <span class="main-color js-rotating">Register Here, Join Us</span>
             </h2>
             <p class="para" style="text-align: center">
-              There are many variations of passages of Lorem Ipsum available,
-              but the majority have suffered alteration in some form, by
-              injected humour, or randomised words which don't look even
-              slightly believable. If you are going to use a passage of Lorem
-              Ipsum.
+              Jangan lewatkan kesempatan! Daftarkan diri Anda sekarang dan
+              terlibat dalam petualangan kami.
             </p>
             <div
               class="button-container"
@@ -166,9 +167,9 @@
               "
             >
               <a
-                class="btn btn-large btn-rounded btn-red btn-hvr-blue mt-3"
+                class="btn btn-large btn-rounded btn-green btn-hvr-pink mt-3"
                 href="javascript:void(0);"
-                >Learn More
+                >Regist Here
                 <div class="btn-hvr-setting">
                   <ul class="btn-hvr-setting-inner">
                     <li class="btn-hvr-effect"></li>
@@ -254,6 +255,7 @@
     <script src="../vendor/js/extensions/revolution.extension.video.min.js"></script>
     <!-- custom script -->
     <script src="js/script.js"></script>
+
     <!-- jQuery -->
     <script src="../agency/js/about-contact/jquery-2.1.0.min.js"></script>
 
