--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
     </section>
     <!-- ***** Blog End ***** -->
 
-    <!--Team Start-->
+    <!--Visi Misi Start-->
     <section class="text-center" id="Program">
       <div class="container">
         <!--Row-->
@@ -990,7 +990,7 @@
         </div>
       </div>
     </section>
-    <!--Team End-->
+    <!--Visi Misi End-->
 
     <!--Client Map-->
     <section class="" id="client">
